Create function to add buttons to linear layout from string list

--- a/app/src/main/res/layout/fragment_allergy_customization.xml
+++ b/app/src/main/res/layout/fragment_allergy_customization.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout3"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.personalization.fragments.AllergyCustomizationFragment">
 
     <TextView
@@ -13,7 +13,7 @@
         style="@style/listElementText"
         android:layout_width="341dp"
         android:layout_height="66dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="50dp"
         android:text="@string/select_allergies"
         android:textAlignment="center"
         android:textSize="26sp"
@@ -23,88 +23,70 @@
 
     <LinearLayout
         android:id="@+id/allergiesLinearLayout"
-        android:layout_width="match_parent"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/WhatAllergiesText">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/allergiesInside1LinearLayout"
-            android:layout_width="0dp"
+
+        <Button
+            android:id="@+id/allergyGlutenBtn"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:text="@string/allergy_gluten" />
 
-            <Button
-                android:id="@+id/allergyGlutenBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_gluten" />
+        <Button
+            android:id="@+id/allergyDiaryBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_dairy"
+            android:textOff="@string/allergy_dairy" />
 
-            <Button
-                android:id="@+id/allergyDiaryBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_dairy"
-                android:textOff="@string/allergy_dairy" />
+        <Button
+            android:id="@+id/allergyEggsBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_eggs"
+            android:textOff="@string/allergy_eggs" />
 
-            <Button
-                android:id="@+id/allergyEggsBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_eggs"
-                android:textOff="@string/allergy_eggs" />
+        <Button
+            android:id="@+id/allergyPeanutsBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_peanut"
+            android:textOff="@string/allergy_peanut" />
 
-            <Button
-                android:id="@+id/allergyPeanutsBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_peanut"
-                android:textOff="@string/allergy_peanut" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/allergiesInside2LinearLayout"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+        <Button
+            android:id="@+id/allergySesameBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_seasme"
+            android:textOff="@string/allergy_seasme" />
 
-            <Button
-                android:id="@+id/allergySesameBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_seasme"
-                android:textOff="@string/allergy_seasme" />
+        <Button
+            android:id="@+id/allergyTreeNutsBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_treenuts"
+            android:textOff="@string/allergy_treenuts" />
 
-            <Button
-                android:id="@+id/allergyTreeNutsBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_treenuts"
-                android:textOff="@string/allergy_treenuts" />
+        <Button
+            android:id="@+id/allergySoyBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_soy"
+            android:textOff="@string/allergy_soy" />
 
-            <Button
-                android:id="@+id/allergySoyBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_soy"
-                android:textOff="@string/allergy_soy" />
-
-            <Button
-                android:id="@+id/allergyFruttiBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/allergy_frutti_di_mare"
-                android:textOff="@string/allergy_frutti_di_mare" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/allergyFruttiBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/allergy_frutti_di_mare"
+            android:textOff="@string/allergy_frutti_di_mare" />
     </LinearLayout>
 
 
