--- a/app/src/main/res/layout/fragment_meals_number_customization.xml
+++ b/app/src/main/res/layout/fragment_meals_number_customization.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.personalization.fragments.MealsNumberCustomizationFragment">
+    tools:context=".view.personalization.fragments.MealsNumberCustomizationPersonalizationFragment">
 
 
     <TextView
@@ -179,7 +179,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="@string/confirm"
+        android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
