--- a/app/src/main/res/layout/fragment_recipe_type_customization.xml
+++ b/app/src/main/res/layout/fragment_recipe_type_customization.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.personalization.fragments.RecipeTypeCustomizationFragment">
+    tools:context=".view.personalization.fragments.RecipeTypeCustomizationPersonalizationFragment">
 
     <TextView
         android:id="@+id/textView14"
@@ -31,6 +31,7 @@
 
         <Button
             android:id="@+id/soupBtn"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/soup" />
