--- a/app/src/main/res/layout/fragment_meals_number_customization.xml
+++ b/app/src/main/res/layout/fragment_meals_number_customization.xml
@@ -49,7 +49,7 @@
 
     <LinearLayout
         android:id="@+id/portionAmountLayout"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
@@ -90,7 +90,7 @@
 
     <LinearLayout
         android:id="@+id/cookingTimePreferenceLayout"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
@@ -130,7 +130,7 @@
 
     <LinearLayout
         android:id="@+id/mealPerPlanLayout"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
