Paging before temporary deletion

--- a/app/src/main/res/layout/activity_edit_weight.xml
+++ b/app/src/main/res/layout/activity_edit_weight.xml
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="@+id/weightET" />
 
     <TextView
-        android:id="@+id/weightUnitTV"
+        android:id="@+id/weightUnitTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
