--- a/app/src/main/res/layout/fragment_cookbook_screen.xml
+++ b/app/src/main/res/layout/fragment_cookbook_screen.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    android:padding="10dp">
+        android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,3 +13,4 @@
         android:id="@+id/recipesByCategoriesLayoutContainer"
         android:orientation="vertical"/>
 </ScrollView>
+</layout>
