--- a/app/src/main/res/layout/activity_cooking_steps.xml
+++ b/app/src/main/res/layout/activity_cooking_steps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.recipes.CookingStepsActivity">
+    tools:context="piotr.michalkiewicz.mealplannerclient.view.recipes.CookingStepsActivity">
 
     <TextView
         android:id="@+id/textView10"
