--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.recipes.RecipeActivity"
+    tools:context="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeActivity"
     tools:showIn="@layout/activity_recipe">
 
     <androidx.constraintlayout.widget.ConstraintLayout
