--- a/app/src/main/res/layout/fragment_cookbook_screen.xml
+++ b/app/src/main/res/layout/fragment_cookbook_screen.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/brighterGrey"
         android:padding="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recipesByCategoriesLayoutContainer"
-        android:orientation="vertical">
-
-        <androidx.recyclerview.widget.RecyclerView
+        <LinearLayout
+            android:id="@+id/recipesByCategoriesLayoutContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/temporaryRecipesRecyclerView"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
-</ScrollView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/temporaryRecipesRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:orientation="horizontal" />
+
+        </LinearLayout>
+    </ScrollView>
 </layout>
