--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorDivider">#B6B6B6</color>
     <color name="opaqueBlack">#77000000</color>
     <color name="brightGrey">#A0A0A0</color>
+    <color name="brighterGrey">#EBECF0</color>
     <color name="white">#E5E5E5</color>
     <color name="hyperlink_blue">#0080FF</color>
 
