--- a/app/src/main/res/layout/fragment_cookbook_screen.xml
+++ b/app/src/main/res/layout/fragment_cookbook_screen.xml
@@ -10,14 +10,8 @@
         <LinearLayout
             android:id="@+id/recipesByCategoriesLayoutContainer"
             android:layout_width="match_parent"
-            android:layout_height="800dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/temporaryRecipesRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="240dp"
-                android:orientation="horizontal" />
 
         </LinearLayout>
     </ScrollView>
