--- a/app/src/main/res/layout/fragment_cookbook_screen.xml
+++ b/app/src/main/res/layout/fragment_cookbook_screen.xml
@@ -10,7 +10,7 @@
         <LinearLayout
             android:id="@+id/recipesByCategoriesLayoutContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="800dp"
             android:orientation="vertical">
 
         </LinearLayout>
