--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -214,10 +214,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
             android:text="@string/avoided_ingredients_label"
+            app:layout_constraintBottom_toBottomOf="@+id/avoidedIngredientsChipGroup"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/allergiesLabelTV" />
+            app:layout_constraintTop_toTopOf="@+id/avoidedIngredientsChipGroup" />
 
         <TextView
             android:id="@+id/allergiesLabelTV"
@@ -225,10 +225,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
             android:text="@string/allergies_label"
+            app:layout_constraintBottom_toBottomOf="@+id/allergiesChipGroup"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dietLabelTV" />
+            app:layout_constraintTop_toTopOf="@+id/allergiesChipGroup" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier3"
@@ -245,14 +245,14 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="@id/barrier3"
-            app:layout_constraintTop_toBottomOf="@+id/dietTV"></com.google.android.material.chip.ChipGroup>
+            app:layout_constraintTop_toBottomOf="@+id/dietTV" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/avoidedIngredientsChipGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
