--- a/app/src/main/res/layout/horizontal_recipes_list.xml
+++ b/app/src/main/res/layout/horizontal_recipes_list.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="240dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
+    android:background="@drawable/recipes_list_border">
 
     <TextView
         android:layout_width="match_parent"
