--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -214,8 +214,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:text="@string/avoided_ingredients_label"
-            app:layout_constraintBottom_toBottomOf="@+id/avoidedIngredientsChipGroup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/avoidedIngredientsChipGroup" />
 
@@ -240,7 +240,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/allergiesChipGroup"
-            android:layout_width="wrap_content"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
@@ -249,7 +249,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/avoidedIngredientsChipGroup"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
