--- a/app/src/main/res/drawable/recipes_list_border.xml
+++ b/app/src/main/res/drawable/recipes_list_border.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--
-        To change the background color of the view, change the both solid color.
-        To change border color and width, change the both stroke color and both stroke width.
-    -->
+
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/brighterGrey" />
-            <stroke
-                android:color="@color/brightGrey"
-                android:width="1dp" />
+            <solid android:color="@color/brightGrey" />
         </shape>
     </item>
-    <item
-        android:bottom="1dp"
-        android:top="1dp">
+
+    <item android:bottom="1.5dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/brighterGrey" />
-            <!--stroke android:color="#246921" android:width="2dp"/-->
         </shape>
     </item>
+
 </layer-list>
