--- a/app/src/main/res/layout/activity_change_location.xml
+++ b/app/src/main/res/layout/activity_change_location.xml
@@ -1,39 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-    <Button
-        android:id="@+id/cancelLocationChangeBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@android:string/cancel"
-        app:layout_constraintEnd_toStartOf="@+id/confirmLocationBtn"
-        app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countrySpinner"
+        app:layout_constraintWidth_percent="0.6">
 
-    <Button
-        android:id="@+id/confirmLocationBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/confirm"
-        app:layout_constraintEnd_toEndOf="@+id/countrySpinner"
-        app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />
+        <Button
+            android:id="@+id/cancelLocationChangeBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="1"
+            android:paddingRight="4dp"
+            android:text="@android:string/cancel" />
+
+        <Button
+            android:id="@+id/confirmLocationBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:paddingLeft="4dp"
+            android:text="@string/confirm" />
+    </LinearLayout>
 
     <Spinner
         android:id="@+id/countrySpinner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.6" />
+
+    <TextView
+        android:id="@+id/locationSpinnerLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/country_spinner_label"
+        app:layout_constraintBottom_toTopOf="@+id/countrySpinner"
+        app:layout_constraintStart_toStartOf="@+id/countrySpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
