--- a/app/src/main/res/layout/activity_edit_level.xml
+++ b/app/src/main/res/layout/activity_edit_level.xml
@@ -6,34 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".view.settings.EditActivityLevelActivity">
 
-    <Button
-        android:id="@+id/cancelActivityLevelChangeBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@android:string/cancel"
-        app:layout_constraintEnd_toStartOf="@+id/confirmActivityLevelBtn"
-        app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countrySpinner"
+        app:layout_constraintWidth_percent="0.6">
 
-    <Button
-        android:id="@+id/confirmActivityLevelBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/confirm"
-        app:layout_constraintEnd_toEndOf="@+id/countrySpinner"
-        app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />
+        <Button
+            android:id="@+id/cancelActivityLevelChangeBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="1"
+            android:paddingRight="4dp"
+            android:text="@android:string/cancel" />
+
+        <Button
+            android:id="@+id/confirmActivityLevelBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:paddingLeft="4dp"
+            android:text="@string/confirm" />
+    </LinearLayout>
 
     <Spinner
         android:id="@+id/countrySpinner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.6" />
+
+    <TextView
+        android:id="@+id/levelSpinnerLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/activity_level_spinner_label"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@+id/countrySpinner"
+        app:layout_constraintStart_toStartOf="@+id/countrySpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
