--- a/app/src/main/res/layout/activity_edit_weight.xml
+++ b/app/src/main/res/layout/activity_edit_weight.xml
@@ -28,6 +28,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
