--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textView5"
-        style="@style/listHeaderText"
+        style="@style/bigPlainText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
