--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -17,6 +17,9 @@
             android:id="@+id/recipeImageView"
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:src="@mipmap/zen_na_talerzu"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +37,10 @@
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:id="@+id/imageContainer"
@@ -112,7 +118,7 @@
 
         <TextView
             android:id="@+id/aboutLabelTV"
-            style="@style/listHeaderText"
+            style="@style/bigPlainText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -134,7 +140,7 @@
 
         <TextView
             android:id="@+id/commentsSectionTV"
-            style="@style/listHeaderText"
+            style="@style/bigPlainText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
