--- a/app/src/main/res/layout/cooking_step.xml
+++ b/app/src/main/res/layout/cooking_step.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/stepItemLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="8dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView11"
-        style="@style/listElementText"
+        style="@style/cooking_step_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/step"
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/stepNrTV"
-        style="@style/listElementText"
+        style="@style/cooking_step_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
