--- a/app/src/main/res/layout/horizontal_recipes_list.xml
+++ b/app/src/main/res/layout/horizontal_recipes_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recipesRecyclerViewLabel"
-        style="@style/listHeaderText" />
+        style="@style/bigPlainText" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
