Cooking mode implemented, voice control in progress

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="cooking_step">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="smallText">
         <item name="android:textSize">11sp</item>
     </style>
