--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -150,7 +150,7 @@
             app:layout_constraintTop_toBottomOf="@+id/aboutMealTV" />
 
         <LinearLayout
-            android:id="@+id/commentsSection"
+            android:id="@+id/commentsSectionLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
