--- a/app/src/main/res/layout/activity_cooking_mode.xml
+++ b/app/src/main/res/layout/activity_cooking_mode.xml
@@ -30,7 +30,7 @@
 
         <TextView
             android:id="@+id/cookingStepTV"
-            style="@style/cooking_step"
+            style="@style/normalTextBold"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
