--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,14 +38,17 @@
     <style name="normalText">
         <item name="android:textSize">18sp</item>
     </style>
-
-    <style name="cooking_step_header">
-        <item name="android:textSize">20sp</item>
+    <style name="normalTextBold">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="recipeAbout">
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="cooking_step">
-        <item name="android:textSize">18sp</item>
+    <style name="cooking_step_header">
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -66,9 +69,6 @@
     <style name="recipe_thumbnail_text">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
-    </style>
-    <style name="loading_dialog_text">
-        <item name="android:textSize">18sp</item>
     </style>
     <style name="search_icon_top_label">
         <item name="android:textSize">16sp</item>
