--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="brighterGrey">#EBECF0</color>
     <color name="white">#E5E5E5</color>
     <color name="hyperlink_blue">#0080FF</color>
-
+    <color name="duskYellow">#D4AF37</color>
+    <color name="goldenYellow">#FFDF00</color>
+    <color name="lightGrey">#D3D3D3</color>
 </resources>
