Shopping list no launch from IngredientsActivity

--- a/app/src/main/res/layout/cooking_step.xml
+++ b/app/src/main/res/layout/cooking_step.xml
@@ -26,12 +26,15 @@
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toTopOf="parent" />
 
+    p
+
     <TextView
         android:id="@+id/stepDescriptionTV"
         style="@style/normalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:paddingBottom="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 </androidx.constraintlayout.widget.ConstraintLayout>
