--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -34,20 +34,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recipeListItemRatingBar" />
-
-            <RatingBar
-                android:id="@+id/recipeListItemRatingBar"
-                style="@style/RatingBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:numStars="5"
-                android:stepSize="0.1"
-                app:layout_constraintEnd_toEndOf="@+id/recipeCardThumbnail"
-                app:layout_constraintStart_toStartOf="@+id/recipeCardThumbnail"
                 app:layout_constraintTop_toBottomOf="@+id/recipeCardThumbnail" />
         </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
