[FOOD-99] Resolving warnings in activity_ogin

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/textView2"
@@ -32,7 +33,9 @@
         android:id="@+id/emailET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
         android:hint="@string/login_et"
+        android:inputType="textEmailAddress"
         android:textColorHint="@color/brightGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +58,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:autofillHints="AUTOFILL_HINT_PASSWORD"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColorHint="@color/brightGrey"
         app:layout_constraintEnd_toEndOf="parent"
